[package]
name = "intelhex"
version = "0.2.0"
edition = "2024"
authors = [
    "Tabre Perez <tabre@tabre.com>"
]
description="Provides tools for working with Intel Hex files"
repository="https://github.com/tabre/intelhex"
license="MIT"
keywords=["intel", "hex"]

[lib]
name = "intelhex"
path = "src/lib/intelhex/mod.rs"

[dependencies]
bytes = "1.10.1"
hex = "0.4.3"
